[tool.poetry]
name = "maup"
version = "1.0.4"
description = "The geospatial toolkit for redistricting data"
authors = ["Max Hully <max@mggg.org>", "Max Fan <root@max.fan>"]
readme = "README.md"
license = "MIT"
classifiers=[
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Operating System :: OS Independent",
	"License :: OSI Approved :: MIT License",
]
include = ["best-practices.md"]
exclude = ["examples/", "tests/"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.20.3"
pandas = "^1.2.4"
geopandas = "^0.9.0"
Shapely = "^1.7.1"
tqdm = "^4.61.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
Sphinx = "^4.0.2"
numpydoc = "^1.1.0"
pydata-sphinx-theme = "^0.6.3"
myst-parser = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
