[tool.poetry]
name = "maup"
version = "1.1.1"
description = "The geospatial toolkit for redistricting data"
authors = [
    "Metric Geometry and Gerrymandering Group <engineering@mggg.org>",
    "Max Hully <max@mggg.org>",
    "Max Fan <root@max.fan>"
]
readme = "README.md"
license = "MIT"
classifiers=[
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Operating System :: OS Independent",
	"License :: OSI Approved :: MIT License",
]
include = ["best-practices.md"]
exclude = ["examples/", "tests/"]

[tool.poetry.dependencies]
python = "^3.9.0,<3.13.0"
numpy = "^1.23.0"
pandas = "^2.1.2"
geopandas = "^0.12.2"
Shapely = "^2.0.1"
tqdm = "^4.61.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
Sphinx = "^4.0.2"
numpydoc = "^1.1.0"
pydata-sphinx-theme = "^0.6.3"
myst-parser = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
