[tool.poetry]
name = "maup"
version = "2.0.3"
description = "The geospatial toolkit for redistricting data"
authors = [
    "Metric Geometry and Gerrymandering Group <dev@mggg.org>",
    "Max Hully <max@mggg.org>",
    "Max Fan <root@max.fan>"
]
license = "MIT"
readme = "README.md"
keywords = ["geospatial", "redistricting", "gis"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]
packages = [
    { include = "maup" }
]
include = ["best-practices.md"]
exclude = ["examples", "tests"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^2.3.2"
pandas = "^2.3.1"
geopandas = "^1.1.1"
Shapely = "^2.1.1"
tqdm = "^4.67.1"
pyproj = ">=3.7.2" 

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
Sphinx = "^8.2.3"
numpydoc = "^1.9.0"
pydata-sphinx-theme = "^0.16.1"
myst-parser = "^4.0.1"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^3.0.2"
black = "^25.1.0"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
